@@ -139,6 +139,7 @@ import static uk.gov.hmcts.probate.model.DocumentType.AD_COLLIGENDA_BONA_GRANT_R
 import static uk.gov.hmcts.probate.model.DocumentType.ADMON_WILL_GRANT;
 import static uk.gov.hmcts.probate.model.DocumentType.ADMON_WILL_GRANT_REISSUE;
 import static uk.gov.hmcts.probate.model.DocumentType.CAVEAT_STOPPED;
+import static uk.gov.hmcts.probate.model.DocumentType.SOLICITOR_COVERSHEET;
 import static uk.gov.hmcts.probate.model.DocumentType.DIGITAL_GRANT;
 import static uk.gov.hmcts.probate.model.DocumentType.DIGITAL_GRANT_DRAFT;
 import static uk.gov.hmcts.probate.model.DocumentType.DIGITAL_GRANT_REISSUE;
@@ -489,11 +490,10 @@ class CallbackResponseTransformerTest {
     private static final String DAMAGE_CULPRIT_FN = "Damage Culprit FN";
     private static final String DAMAGE_CULPRIT_LN = "Damage Culprit LN";
     private static final String DAMAGE_DATE = "9/2021";
-    private static final String SERVICE_REQUEST_REFEREMCE = "Service Request Ref";
     private static final Optional<UserInfo> CASEWORKER_USERINFO = Optional.ofNullable(UserInfo.builder()
         .familyName("familyName")
         .givenName("givenname")
-        .roles(Arrays.asList("caseworker-probate"))
+        .roles(List.of("caseworker-probate"))
         .build());
     private static final String EVENT_ID = "eventId";
 
@@ -4929,6 +4929,30 @@ class CallbackResponseTransformerTest {
 
         CallbackResponse callbackResponse = underTest.defaultRequestInformationValues(callbackRequestMock);
         assertEquals(NO, callbackResponse.getData().getInformationNeededByPostSwitch());
+    }
+
+    @Test
+    void shouldSetCaseSubmissionDateWithCoversheetAndSentEmail() {
+        Document sentEmail = Document.builder()
+                .documentLink(documentLinkMock)
+                .documentType(SENT_EMAIL)
+                .documentFileName(SENT_EMAIL.getTemplateName())
+                .build();
+        Document coversheet = Document.builder()
+                .documentLink(documentLinkMock)
+                .documentType(SOLICITOR_COVERSHEET)
+                .build();
+
+        when(callbackRequestMock.getCaseDetails()).thenReturn(caseDetailsMock);
+        when(caseDetailsMock.getData()).thenReturn(caseDataBuilder.build());
+
+        CallbackResponse callbackResponse = underTest.setCaseSubmissionDate(sentEmail, coversheet, callbackRequestMock);
+
+        assertEquals(LocalDate.now().format(dateTimeFormatter),
+                callbackResponse.getData().getApplicationSubmittedDate());
+        assertEquals(documentLinkMock, callbackResponse.getData().getSolsCoversheetDocument());
+        verify(documentTransformer, times(1)).addDocument(callbackRequestMock, sentEmail,
+                false);
     }
 
     @Test
